Changed title to Idea

--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
 	-->
 
 
-	<title>Explain That Shit</title>
+	<title>Explain That Idea</title>
 	
 	<link href='css/style.css' rel='stylesheet' type='text/css'>	
 
@@ -26,7 +26,7 @@
 <body>
 	
 <div id="wtf">
-  	<div id="so" class="fuck">Blank Stares Again? Explain That Shit!</div>
+  	<div id="so" class="fuck">Blank Stares Again? Explain That Idea!</div>
   	<div id="frames">
   	  <!-- frames here -->
   	</div>
