--- a/index.html
+++ b/index.html
@@ -58,22 +58,71 @@
 <script type="text/javascript">
   
 var text = [];
-  text[1] = "Taking the time to learn new shit is expensive. Your explanation should make that shit cheap.";
-  text[2] = "Your explanation should make peeps feel confident. Without confidence, no one will give a shit.";
-  text[3] = "Build context - it's the world where your shit lives. Start with the forest and then talk about the trees.";
-  text[4] = "Make connections to shit the audience already understands.  Show them how X is like Y with a few differences.";
+    text[1] = "Taking the time to learn new ideas is expensive. Your explanation should make it cheap.";
+  text[2] = "Your explanation should make people feel confident. Without confidence, no one will give a hoot.";
+  text[3] = "Build context - it's the world where your ideas live. Start with the forest and then talk about the trees.";
+  text[4] = "Make connections to things the audience already understands. Show them how X is like Y with a few differences.";
   text[5] = "Stop trying to look like a smartypants and start helping people feel confident.";
-  text[6] = "Don't depend on facts alone.  Show how a person experiences and learns about that shit. ";
-  text[7] = "Empathize and shit. Imagine what it's like to hear your explanation in another person's shoes.";
-  text[8] = "Don't assume people know what you know. They don't know that shit.  Give them a way to catch up quickly.";
-  text[9] = "Impress experts not with your depth of knowledge, but how broadly you can apply that shit.";
+  text[6] = "Facts are not enough. Show how a person experiences and learns about the facts to make it an explanation. ";
+  text[7] = "Empathize. Imagine what it's like to hear your explanation in another person's shoes. Just hope they're comfortable";
+  text[8] = "Don't assume people know what you know. They don't.  Give them a way to catch up quickly.";
+  text[9] = "Impress experts not with your depth of knowledge, but how broadly you can apply it.";
+  text[10] = "Start with some points that help set the stage for your ideas. Come to agreement early and often.";
+  text[11] = "If your intent is to explain something, make your intentions known. Show them you're going to solve a problem";
+  text[12] = "The best thing you can do is make people care about things you say. Explanations can make people care.";
+  text[13] = "Think of your explanation as a package of ideas designed that's designed to blow people's minds with clarity.";
+  text[14] = "Taking the time to learn new things is expensive. Your explanation should make that stuff cheap.";
+  text[15] = "Keep it short.";
+  text[16] = "Consider every word you use in an explanation. A single word can mess it up.";
+  text[17] = "Your explanation should make people feel confident. Without confidence, no one will give a hoot.";
+  text[18] = "Zoom out at the beginning of an explanation. Look at that the ideas from the clouds. Then zoom in slowly, like a skydiver, but slower.";
+  text[19] = "The Curse of Knowledge is a serious affliction. Being a smartypants makes it hard to imagine what it's like not to know something.";
+  text[20] = "Stories work. Adding a person's experience to your explanation makes it more like a story.";
+  text[21] = "Plan your explanation ahead of time. Consider your audience and what will make them feel like Einstein.";
+  text[22] = "When explaining something, remember to put the 'why' before the 'how', like the salt before the tequila.";
+  text[23] = "Explanation is a skill. It can be learned and improved. The first step is to realize that this is possible.";
+  text[24] = "Fact telling sucks. Storytelling is what makes people remember your ideas.  ";
+  text[25] = "Explanations make facts and ideas understandable. But if you can inspire and motivate too - that's the bomb.";
+  text[26] = "Explanations clarify and describe facts. It's all about helping people see that stuff from a new perspective";
+  text[27] = "Explanation is an art, we all do it differently and that makes it creative and awesome.";
+  text[28] = "Get this. Studies have shown that explaining ideas can benefit the explainer more than the explainee.";
+  text[29] = "When someone asks 'What is X?' Answer as if they asked 'Why should I care about X?'";
+  text[30] = "Explanations affect confidence. Good ones build it, poor ones take it away.";
+  text[31] = "The best explanations start as a written document, like a script for a movie or rap lyrics.";
+  text[32] = "Context creates a foundation for other ideas. Without it, ideas are homeless and may be hungry. Feed the ideas context.";
+  text[33] = "In introducing a new idea, show how the idea takes away pain. Make them say 'I know that feeling'";
+  text[34] = "Check it: Facts give stories substance. Stories give facts meaning. Explanations need both. How's your mind? Blown?";
+  text[35] = "Analogy is powerful. Remember: analogies explain a connection, metaphors highlight it.";
+  text[36] = "Be willing to trade understanding for accuracy. But get a good deal when you do.";
+  text[37] = "Constrain yourself. Design your explanation within the limits of how it will be used. I'd lose the handcuffs though.";
+  text[38] = "Focus on 2-3 big ideas. No one is going to remember half the stuff you say anyway. ";
+  text[39] = "Start building explanation skills by learning to explain what the heck you do for a living and why it matters.";
+  text[40] = "A question any explanation should answer 'why' - as in, why does this make sense? Or why am I so good looking?";
+  text[41] = "Like a movie script, a written explanation can be a starting point for some serious multi-media experiences.";
+  text[42] = "Sometimes the big thing keeping ideas from being adopted isn't features, value or design, but explanation.";
+  text[43] = "Have fun with explanations. Take risks, use humor and make people smile.";
+  text[44] = "Slow the down. Take deep breaths. Add emphasis by saying important...stuff...slowly.";
+  text[45] = "Visuals and media can make your explanation shine. Experiment with ways to blow peoples' minds.";
+  text[46] = "In presenting an explanation, simple drawings can do the trick. You don't have to be Da Vinci or Bob Ross.";
+  text[47] = "You can become a new kind of wizard in your organization - an explanation wizard, a specialist.";
+  text[48] = "You take explanation for granted. Now is the time to take a step back and see what is really possible.";
+  text[49] = "You can become an ambassador for your profession by finding new ways to explain it and make people fall in love.";
+  text[50] = "The only prerequisite for explanation is understanding what you're spewing. Take the time to learn the facts, then get creative. ";
+  text[51] = "Einstein once said 'If you can’t explain it simply, you don’t understand it well enough.' That's some smart stuff right there.";
+  text[51] = "Explanations are like driving directions. Image what it's like to approach a location for the FIRST time.";
+  text[52] = "In the future, companies will compete on who can explain their stuff the best. You can help."
+  text[53] = "Don't let your best explanations disappear into the ether. Record it and it may live forever.";
+  text[54] = "You work inside a bubble. Remember that your explanation has to make sense outside of it.";
+  text[55] = "Explanations aren't enough. If you want to really shine, find ways to make them remarkable.";
+
+   
   
   
 var footnotes = [];
 
 var quips = [];
   quips[0] = "Who Cares? What Else?";
-  quips[1] = "That Shit Will Never Work.";
+  quips[1] = "That Will Never Work.";
   quips[2] = "Next!";
   quips[3] = "Not Worth It.";
   quips[4] = "Shyeah, As If.";
