--- a/index.html
+++ b/index.html
@@ -122,11 +122,14 @@ var footnotes = [];
 
 var quips = [];
   quips[0] = "Who Cares? What Else?";
-  quips[1] = "That Will Never Work.";
-  quips[2] = "Next!";
-  quips[3] = "Not Worth It.";
+  quips[1] = "That Shit Will Never Work.";
+  quips[2] = "Don't Stop Now.";
+  quips[3] = "That's Not For Me";
   quips[4] = "Shyeah, As If.";
   quips[5] = "Hit Me Baby One More Time";
+  quips[6] = "More! More! More!";
+  quips[7] = "Bartender, I'll Have Another.";
+
 
 </script>
 
