--- a/index.html
+++ b/index.html
@@ -43,9 +43,9 @@
 		</div>
 	</div>
 </div>
-<script src="http://ajax.googleapis.com/ajax/libs/jquery/1.7.1/jquery.min.js"></script>
+<script src="jquery-1.8.1.min.js"></script>
 <script src="mustache.js"></script>
-<script src="modernizer.js"></script>
+<script src="modernizr.js"></script>
 
 
 <script type="text/html" id="frame_template">
@@ -174,6 +174,9 @@ $(function(){
   next_frame();
 });
 </script>
+
+
+
 
 <script type="text/javascript">
   var _gaq = _gaq || [];
