Social Media Integration + CSS Fixes
Center the image vertically. Add the assets for social media. Add a
subtitle and style. Make the twitter link be an 'intent' link.

--- a/index.html
+++ b/index.html
@@ -26,7 +26,9 @@
 <body>
 	
 <div id="wtf">
-  	<div id="so" class="fuck">EXPLAIN THAT SHIT</div>
+  	<div id="so" class="fuck">EXPLAIN THAT SHIT<br/>
+      	<strong class="fuck_subtitle">They Still Don't Understand?</strong>
+  	</div>
   	<div id="frames">
   	  <!-- frames here -->
   	</div>
@@ -34,7 +36,7 @@
 <div id="share" class="clearfix">
 		<div class="wrap">
 		<div id="copyright_box">
-		&copy; 2012 <a href="#">Common Craft LLC</a> | <a href="#">PG Version</a>
+		&copy; 2012 <a href="#">Common Craft LLC</a> | <a href="#">PG Version</a> &nbsp; <a href="http://twitter.com/intent/tweet?url=http://explainthatshit.com&text=I love the Explain that Shit Website!&via=explainthatshit" target="_blank""><img src="images/twitter.png" alt="Twitter"></a> <a href="#"><img src="images/facebook.png" alt="Facebook"></a> <a href="#"><img src="images/g.png" alt="G"></a> <a href="#"><img src="images/amazon.png" alt="Get it on Amazon"></a>
 		</div>
 		<div id="links">
 			<img src="images/book-cover.png" alt="The Art of Explanation"> 
