--- a/index.html
+++ b/index.html
@@ -26,25 +26,34 @@
 <body>
 	
 <div id="wtf">
-  	<div id="so" class="fuck">EXPLAIN THAT SHIT<br/>
-      	<strong class="fuck_subtitle">They Still Don't Understand?</strong>
+  	<div id="so" class="fuck">EXPLAIN THAT IDEA<br/>
+      	<strong class="fuck_subtitle">Still Don't Understand?</strong>
   	</div>
+  	<br/>
   	<div id="frames">
   	  <!-- frames here -->
   	</div>
 </div>
+
+
 <div id="share" class="clearfix">
-		<div class="wrap">
-		<div id="copyright_box">
-		&copy; 2012 <a href="#">Common Craft LLC</a> | <a href="#">PG Version</a> &nbsp; <a href="http://twitter.com/intent/tweet?url=http://explainthatshit.com&text=I love the Explain that Shit Website!&via=explainthatshit" target="_blank""><img src="images/twitter.png" alt="Twitter"></a> <a href="#"><img src="images/facebook.png" alt="Facebook"></a> <a href="#"><img src="images/g.png" alt="G"></a> <a href="#"><img src="images/amazon.png" alt="Get it on Amazon"></a>
-		</div>
-		<div id="links">
+
+	<div id="links">
 			<img src="images/book-cover.png" alt="The Art of Explanation"> 
 			<span>More shit explained!</span>
 			<a href="#">Buy the book</a>
 		</div>
+		<div class="wrap">
+		<div id="copyright_box">
+		&copy; 2012 <a href="#">Common Craft LLC</a> | <a href="#">PG Version</a> &nbsp; Share This! &nbsp;<a href="http://twitter.com/intent/tweet?url=http://explainthatshit.com&text=I love the Explain that Idea Website!&via=explainthatshit" target="_blank""><img src="images/twitter.png" alt="Twitter"></a> <a href="#"><img src="images/facebook.png" alt="Facebook"></a> <a href="#"><img src="images/g.png" alt="G"></a> <a href="#"><img src="images/amazon.png" alt="Get it on Amazon"></a>
+		</div>
+		
+	
+		
 	</div>
 </div>
+
+
 <script src="jquery-1.8.1.min.js"></script>
 <script src="mustache.js"></script>
 <script src="modernizr.js"></script>
