--- a/index.html
+++ b/index.html
@@ -141,8 +141,13 @@ var text = [];
 
    
 var subtitles =[];
-    subtitles[0] = "Testing 1";
-    subtitles[1] = "Testing 2";  
+    subtitles[0] = "Blanks Stares Again?";
+    subtitles[1] = "They Still Don't Understand?";
+    subtitles[2] = "Lightbulbs Not Turning On?"; 
+    subtitles[3] = "Your Message Not Getting Through?"; 
+    subtitles[4] = "Tired of Not Being Understood?"; 
+    subtitles[5] = "Are They Just Not Getting It?"; 
+     
   
 var footnotes = [];
 
