--- a/index.html
+++ b/index.html
@@ -148,7 +148,7 @@ var text = [];
   text[46] = "In presenting an explanation, simple drawings can do the trick. You don't have to be Da Vinci or Bob Ross.";
   text[47] = "You can become a new kind of wizard in your organization - an explanation wizard, a specialist.";
   text[48] = "You take explanation for granted. Now is the time to take a step back and see what is really possible.";
-  text[49] = "You can become an ambassador for your profession by finding new ways to explain it and make people fall in love.";
+  text[49] = "You can become an ambassador for your profession by finding ways to explain it better - and make people care.";
   text[50] = "The only prerequisite for explanation is understanding what you're spewing. Take the time to learn the facts, then get creative. ";
   text[51] = "Einstein once said 'If you can’t explain it simply, you don’t understand it well enough.' That's some smart stuff right there.";
   text[51] = "Explanations are like driving directions. Image what it's like to approach a location for the FIRST time.";
