--- a/index.html
+++ b/index.html
@@ -139,7 +139,7 @@ var text = [];
   text[37] = "Constrain yourself. Design your explanation within the limits of how it will be used. I'd lose the handcuffs though.";
   text[38] = "Focus on 2-3 big ideas. No one is going to remember half the stuff you say anyway. ";
   text[39] = "Start building explanation skills by learning to explain what the heck you do for a living and why it matters.";
-  text[40] = "A question any explanation should answer 'why' - as in, why does this make sense? Or why am I so good looking?";
+  text[40] = "A question any explanation should answer 'why' - as in, why does this make sense? Or why am I sooo good looking?";
   text[41] = "Like a movie script, a written explanation can be a starting point for some serious multi-media experiences.";
   text[42] = "Sometimes the big thing keeping ideas from being adopted isn't features, value or design, but explanation.";
   text[43] = "Have fun with explanations. Take risks, use humor and make people smile.";
@@ -149,7 +149,7 @@ var text = [];
   text[47] = "You can become a new kind of wizard in your organization - an explanation wizard, a specialist.";
   text[48] = "You take explanation for granted. Now is the time to take a step back and see what is really possible.";
   text[49] = "You can become an ambassador for your profession by finding ways to explain it better - and make people care.";
-  text[50] = "The only prerequisite for explanation is understanding what you're spewing. Take the time to learn the facts, then get creative. ";
+  text[50] = "You really have to understand what you're spewing. Take the time to learn the facts, then get creative. ";
   text[51] = "Einstein once said 'If you can’t explain it simply, you don’t understand it well enough.' That's some smart stuff right there.";
   text[51] = "Explanations are like driving directions. Image what it's like to approach a location for the FIRST time.";
   text[52] = "In the future, companies will compete on who can explain their stuff the best. You can help."
