--- a/index.html
+++ b/index.html
@@ -118,7 +118,7 @@ var text = [];
   text[16] = "Consider every word you use in an explanation. A single word can mess it up.";
   text[17] = "Your explanation should make people feel confident. Without confidence, no one will give a hoot.";
   text[18] = "Zoom out. Look at your ideas from the clouds first. Then zoom in slowly, like a skydiver.";
-  text[19] = "The Curse of Knowledge is a serious affliction. Being a smartypants makes it hard to imagine what it's like not to know something.";
+  text[19] = "The Curse of Knowledge is a serious. Being a smartypants makes it hard to imagine NOT knowing something. You must empathize.";
   text[20] = "Stories work. Adding a person's experience to your explanation makes it more like a story.";
   text[21] = "Plan your explanation ahead of time. Consider your audience and what will make them feel like Einstein.";
   text[22] = "When explaining something, remember to put the 'why' before the 'how', like the salt before the tequila.";
