--- a/index.html
+++ b/index.html
@@ -144,7 +144,7 @@ var text = [];
   text[41] = "Like a movie script, a written explanation can be a starting point for some serious multi-media experiences.";
   text[42] = "Sometimes the big thing keeping ideas from being adopted isn't features, value or design, but explanation.";
   text[43] = "Have fun with explanations. Take risks, use humor and make people smile.";
-  text[44] = "Slow the down. Take deep breaths. Add emphasis by saying important...stuff...slowly.";
+  text[44] = "Slow down. Take deep breaths. Add emphasis by saying important...stuff...slowly.";
   text[45] = "Visuals and media can make your explanation shine. Experiment with ways to blow peoples' minds.";
   text[46] = "In presenting an explanation, simple drawings can do the trick. You don't have to be Da Vinci or Bob Ross.";
   text[47] = "You can become a new kind of wizard in your organization - an explanation wizard, a specialist.";
