Common Craft URL

--- a/index.html
+++ b/index.html
@@ -58,7 +58,7 @@
 		</div>
 		<div class="wrap">
 		<div id="copyright_box">
-		&copy; 2012 <a href="#">Common Craft</a> | <a href="http://bit.ly/ccets">NSFW Version</a> &nbsp; </div>
+		&copy; 2012 <a href="http://www.commoncraft.com/">Common Craft</a> | <a href="http://bit.ly/ccets">NSFW Version</a> &nbsp; </div>
 		
 	
 		
