--- a/index.html
+++ b/index.html
@@ -129,7 +129,7 @@ var text = [];
   text[23] = "Explanation is a skill. It can be learned. The first step is to realize that this is possible.";
   text[24] = "Fact-telling sucks. Storytelling is what helps people remember your ideas and explanations.  ";
   text[25] = "Explanations make facts and ideas understandable. But if you can inspire and motivate too - that's the bomb.";
-  text[26] = "Explanations clarify and describe facts. It's all about helping people see that stuff from a new perspective";
+  text[26] = "Explanations clarify and describe facts. It's all about helping people see that stuff from a new perspective.";
   text[27] = "Explanation is an art, we all do it differently and that makes it creative and awesome.";
   text[28] = "Get this. Studies have shown that explaining ideas can benefit the explainer more than the explainee.";
   text[29] = "When someone asks 'What is X?' Answer as if they asked 'Why should I care about X?'";
