Common Craft Link on Mobile Sites

--- a/index.html
+++ b/index.html
@@ -65,15 +65,10 @@
 <div class="footer">
   <div id="share" class="clearfix">
     	<div id="links">
-  			<a href="http://www.amazon.com/gp/product/1118374584/ref=as_li_ss_tl?ie=UTF8&camp=1789&creative=390957&creativeASIN=1118374584&linkCode=as2&tag=commcraf-20"><img src="images/book-cover.png" alt="The Art of Explanation"/></a>
+  			<a href="http://artofexplanation.com/book/art-of-explanation-buy"><img src="images/book-cover.png" alt="The Art of Explanation"/></a>
   			<span>Want more?</span>
-<<<<<<< HEAD
-  			<a href="http://www.amazon.com/gp/product/1118374584/ref=as_li_ss_tl?ie=UTF8&camp=1789&creative=390957&creativeASIN=1118374584&linkCode=as2&tag=commcraf-20" id="buy_more">Buy the book</a>
-        <span class="right-copy">&copy; 2012 Common Craft | <a href="http://bit.ly/ccets">NSFW Version</a></span>
-=======
   			<a href="http://artofexplanation.com/book/art-of-explanation-buy" id="buy_more">Buy the book</a>
         <span class="right-copy">&copy; 2012 <a href="http://www.commoncraft.com/">Common Craft</a> | <a href="http://bit.ly/ccets">NSFW Version</a></span>
->>>>>>> Common Craft Link on Mobile Sites
   		</div>
   		<div class="wrap">
     		<div id="copyright_box">
