Fix code that crashes after 20 clicks.

--- a/index.html
+++ b/index.html
@@ -265,7 +265,7 @@ $(function(){
 		setTimeout(function(){
 			$current.removeClass('future');				
 			setTimeout(function(){
-			  $old.remove();
+			  $('.past').remove();
 			}, 600);
 		}, 200);
 
