--- a/index.html
+++ b/index.html
@@ -174,7 +174,7 @@ var text = [];
 
 
 var subtitles =[];
-    subtitles[0] = "Blanks Stares Again?";
+    subtitles[0] = "Blank Stares Again?";
     subtitles[1] = "They Still Don't Understand?";
     subtitles[2] = "Lightbulbs Not Turning On?";
     subtitles[3] = "Message Not Getting Through?";
