updated the colours and CTA to link to new course instead of the book.

--- a/index.html
+++ b/index.html
@@ -57,7 +57,7 @@
 
   </div>
   </div>
-  <div id="share_this" class="footer">Share This! &nbsp;<a href="http://twitter.com/explainthatidea" target="_blank" id="twitter_link"><img src="images/twitter.png" alt="Twitter"/></a> <div id="fb-adjust"><div class="fb-like" data-href="http://facebook.com/artofexplanation" data-send="false" data-layout="button_count" data-width="100" data-show-faces="false" data-font="lucida grande"></div></div><!--<a href="#" id="facebook_link"><img src="images/facebook.png" alt="Facebook"></a> <!-- <a href="#"><img src="images/g.png" alt="G"></a> <a href="#"><img src="images/amazon.png" alt="Get it on Amazon"></a> --></div>
+  <div id="share_this" class="footer">Share the tip above! &nbsp;<a href="http://twitter.com/explainthatidea" target="_blank" id="twitter_link"><img src="images/twitter.png" alt="Twitter"/></a> <div id="fb-adjust"><div class="fb-like" data-href="http://facebook.com/artofexplanation" data-send="false" data-layout="button_count" data-width="100" data-show-faces="false" data-font="lucida grande"></div></div><!--<a href="#" id="facebook_link"><img src="images/facebook.png" alt="Facebook"></a> <!-- <a href="#"><img src="images/g.png" alt="G"></a> <a href="#"><img src="images/amazon.png" alt="Get it on Amazon"></a> --></div>
   <div class="push">
 
   </div>
@@ -68,12 +68,11 @@
 
 <div id="share" class="clearfix">
 	<div id="links">
-			<a href="http://artofexplanation.com/book/art-of-explanation-buy"><img src="images/book-cover.png" alt="The Art of Explanation"/></a>
-			<span>Want more?</span>
-			<a href="http://artofexplanation.com/book/art-of-explanation-buy" id="buy_more">Buy the book</a>
+      <img src="images/ea_i_white_long_cc.png" height="65px" alt="Explainer Academy"/>
+            <a href="explaineracademy.com" id="buy_more">Take Our Free Course</a>
       <span class="right-copy">&copy; 2016 <a href="http://www.commoncraft.com/">Common Craft</a> | <a href="http://bit.ly/ccets">NSFW Version</a></span>
-		</div>
-		<div class="wrap">
+    </div>
+    <div class="wrap">
 		<div id="copyright_box">
 		&copy; 2016 <a href="http://www.commoncraft.com/">Common Craft</a> | <a href="http://bit.ly/ccets">NSFW Version</a> &nbsp; </div>
 	</div>
