--- a/index.html
+++ b/index.html
@@ -57,7 +57,10 @@
 
   </div>
   </div>
-  <div id="share_this" class="footer">Share the tip above! &nbsp;<a href="http://twitter.com/explainthatidea" target="_blank" id="twitter_link"><img src="images/twitter.png" alt="Twitter"/></a> <div id="fb-adjust"><div class="fb-like" data-href="http://facebook.com/artofexplanation" data-send="false" data-layout="button_count" data-width="100" data-show-faces="false" data-font="lucida grande"></div></div><!--<a href="#" id="facebook_link"><img src="images/facebook.png" alt="Facebook"></a> <!-- <a href="#"><img src="images/g.png" alt="G"></a> <a href="#"><img src="images/amazon.png" alt="Get it on Amazon"></a> --></div>
+  <div id="share_this" class="footer">Share the tip above! &nbsp;
+      <a href="http://twitter.com/explainthatidea" target="_blank" id="twitter_link"><img src="images/twitter.png" alt="Twitter"/></a> 
+      <div class="fb-like" data-href="http://facebook.com/artofexplanation" data-send="false" data-layout="button_count" data-width="100" data-show-faces="false" data-font="lucida grande"></div>
+     </div>
   <div class="push">
 
   </div>
