--- a/index.html
+++ b/index.html
@@ -69,16 +69,16 @@
 <div class="footer">
 
 
-<div id="share" class="clearfix">
+<div id="share">
 	<div id="links">
-      <img src="images/ea_i_white_long_cc.png" height="65px" alt="Explainer Academy"/>
-            <a href="explaineracademy.com/courses/free" id="buy_more">Take Our Free Course</a>
-      <span class="right-copy">&copy; 2016 <a href="http://www.commoncraft.com/">Common Craft</a> | <a href="http://bit.ly/ccets">NSFW Version</a></span>
+        <img src="images/ea_i_white_long_cc.png" height="65px" alt="Explainer Academy"/>
+        <a href="explaineracademy.com/courses/free" id="buy_more">Take Our Free Course</a>         
     </div>
-    <div class="wrap">
-		<div id="copyright_box">
-		&copy; 2016 <a href="http://www.commoncraft.com/">Common Craft</a> | <a href="http://bit.ly/ccets">NSFW Version</a> &nbsp; </div>
-	</div>
+   
+	<div id="copyright_box">
+		&copy; 2016 <a href="http://www.commoncraft.com/">Common Craft</a> | <a href="http://bit.ly/ccets">NSFW Version</a> &nbsp; 
+    </div>
+	
 </div>
 </div>
 
