Added link to logo and fixed destination

--- a/index.html
+++ b/index.html
@@ -71,8 +71,8 @@
 
 <div id="share">
 	<div id="links">
-        <img src="images/ea_i_white_long_cc.png" height="65px" alt="Explainer Academy"/>
-        <a href="explaineracademy.com/courses/free" id="buy_more">Take Our Free Course</a>         
+        <a href="http://www.explaineracademy.com" id="ex_logo" target="_blank"> <img src="images/ea_i_white_long_cc.png" height="65px" alt="Explainer Academy"/></a>   
+        <a href="http://explaineracademy.com/courses/free" id="buy_more" target="_blank">Take Our Free Course</a>         
     </div>
    
 	<div id="copyright_box">
