Added Hop Studios to footer

--- a/index.html
+++ b/index.html
@@ -77,6 +77,8 @@
    
 	<div id="copyright_box">
 		&copy; 2016 <a href="http://www.commoncraft.com/">Common Craft</a> | <a href="http://bit.ly/ccets">NSFW Version</a> &nbsp; 
+        <br>
+        Design by <a href="https://www.hopstudios.com/" target="_blank">Hop Studios</a>
     </div>
 	
 </div>
