--- a/index.html
+++ b/index.html
@@ -72,7 +72,7 @@
 <div id="share">
 	<div id="links">
         <a href="http://www.explaineracademy.com" id="ex_logo" target="_blank"> <img src="images/ea_i_white_long_cc.png" height="65px" alt="Explainer Academy"/></a>   
-        <a href="http://explaineracademy.com/courses/free" id="buy_more" target="_blank">Take Our Free Course</a>         
+        <a href="http://explaineracademy.com" id="buy_more" target="_blank">Learn More</a>         
     </div>
    
 	<div id="copyright_box">
